# PerfDroid

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  justfile
.tmp_doc_parse/unzipped/: [Content_Types].xml
.tmp_doc_parse/unzipped/docProps/: core.xml
.tmp_doc_parse/unzipped/word/: document.xml  numbering.xml
.tmp_doc_parse/unzipped/word/_rels/: document.xml.rels
assets/icons/: app.icns
crates/app/: Cargo.toml  app.rc  build.rs
crates/app/src/: lib.rs  main.rs
crates/app/src/aggregation/: mod.rs
crates/app/src/device/: mod.rs
crates/app/src/export/: mod.rs
crates/app/src/gui/: mod.rs
crates/app/src/logging/: mod.rs
crates/app/src/runtime/: mod.rs
crates/app/src/session/: mod.rs
crates/app/src/storage/: mod.rs
crates/pd-core/: Cargo.toml
crates/pd-registry/: Cargo.toml
crates/pd-sampler/: Cargo.toml
crates/pdcore/: Cargo.toml
crates/pdcore/src/: adb.rs  constants.rs  errors.rs  lib.rs
crates/pdcore/src/atomic/: mod.rs
crates/pdcore/src/traits/: mod.rs
crates/pdcore/src/types/: mod.rs
crates/pdcore/src/utils/: mod.rs
crates/profiler-cpu/: Cargo.toml
crates/profiler-memory/: Cargo.toml
crates/profiler/cpu_clock/: Cargo.toml
crates/profiler/cpu_clock/src/: lib.rs  metadata.rs
crates/profiler/cpu_usage/: Cargo.toml
crates/profiler/cpu_usage/src/: lib.rs  metadata.rs
crates/profiler/fps/: Cargo.toml
crates/profiler/fps/src/: lib.rs  metadata.rs
crates/profiler/power/: Cargo.toml
crates/profiler/power/src/: lib.rs  metadata.rs
crates/profiler/temperature/: Cargo.toml
crates/profiler/temperature/src/: lib.rs  metadata.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
docs/: profiler_interface.md  tech_doc.md
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
