[workspace]
members = [
  "crates/pdcore",
  "crates/registry",
  "crates/app",
  "crates/profiler/cpu_clock",
  "crates/profiler/cpu_usage",
  "crates/profiler/fps",
  "crates/profiler/power",
  "crates/profiler/temperature",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
adb_client = "3.1.1"
gpui = "0.2.2"
gpui-component = "0.5.1"
