[workspace]
members = [
  "crates/pdcore",
  "crates/registry",
  "crates/app",
  "crates/profiler/cpu_clock",
  "crates/profiler/cpu_usage",
  "crates/profiler/fps",
  "crates/profiler/power",
  "crates/profiler/temperature",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
adb_client = "3.1.1"
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
